# inpixly

./: CLAUDE.md  Cargo.toml  README.md  config.toml  flake.nix
frontend/: Cargo.toml  Dioxus.toml
frontend/assets/: main.css
frontend/src/: api.rs  main.rs  webrtc.rs  ws.rs
frontend/src/pages/: home.rs  mod.rs
frontend/src/pages/room/: chat.rs  member_list.rs  mod.rs  screen_view.rs
server/: Cargo.toml  config.nix
server/src/: cleanup.rs  config.rs  main.rs  room.rs  state.rs  ws.rs
shared/: Cargo.toml
shared/src/: lib.rs
