[package]
name = "inpixly-server"
version = "0.1.0"
edition = "2024"

[dependencies]
inpixly-shared = { path = "../shared" }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "time",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tvix-eval = { git = "https://github.com/tvlfyi/tvix" }
tvix-serde = { git = "https://github.com/tvlfyi/tvix" }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
subtle = "2"
tokio-util = "0.7"
